[metadata]
name = GAR
version = 0.0.1
author = Yury Kalbaska
author_email = yk@kantynent.com
description = A script that converts GAR into a readable format.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src